--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 name: Schwartzography
-url: http://localhost:4000
+url: http://eeeschwartz.github.io/schwartzography/
 permalink: /slug/
 paginate: 1
